{{$NEXT}}

1.19     2021-05-02

- When the precious lint test fails, it now prints out the output from
  precious (though with garbled UTF-8 for reasons I haven't figured out yet).

- Remove my RunExtraTests plugin. This is no longer needed now that dzil
  supports passing the --jobs flags to `dzil test` and `dzil release`.


1.18     2021-01-24

- Fix development prereqs for projects that use precious. This was still using
  very old Perl::Tidy and Perl::Critic versions.


1.17     2021-01-24

- Fix the generated precious.toml to expect stderr output from omegasort.


1.16     2021-01-24

- Really fix generated precious.toml for perltidy.


1.15     2021-01-24

- Fix generated precious.toml to expect `perltidy --assert-tidy` to exit with
  2 when a file is not tidy, not 1.


1.14     2021-01-24

- Include Test::TidyAll plugin if there's a tidyall.ini file present.

- Skip the DROLSKY::BundleAuthordep plugin when checking for stale prereqs.


1.13     2021-01-21

- Use GitHub issues for all distros.


1.12     2021-01-08

- Fixed a bug in the generated precious.toml config for perlcritic.

- Added podchecker and podtidy to the generated precious.toml.

- Added a helper to generate some additional dev tooling to bootstrap
  installing precious and omegasort, as well as a pre-commit script and a
  helper to set that up.

- Added a plugin that updates the dist.ini to depend on the latest version of
  this bundle.


1.11     2020-12-29

- Fix bug in DROLSKY::PerlLinterConfigFiles plugin.


1.10     2020-12-29

- Replace code to set up tidyall with code to set up precious
  (https://github.com/houseabsolute/precious).


1.09     2020-07-20

- Update generated perltidyrc to work around changes in recent Perl::Tidy
  versions that interact badly with
  https://github.com/houseabsolute/perl-code-tidyall/issues/84.


1.08     2020-05-03

- Require PromptIfStale 0.056. That version skips all local plugins when
  checking for staleness. This lets me revert the change in 1.07.