@@ -140,35 +140,6 @@ join "\n\n", (
             . $distmeta->{resources}{x_MailingList} . '>.'
         : (),
     ),
-    (
-        $distmeta->{resources}{x_IRC}
-        ? 'This distribution also has an IRC channel at' . "\nL<" . do {
-
-            # try to extract the channel
-            if (
-                my ( $network, $channel ) = (
-                    $distmeta->{resources}{x_IRC}
-                        =~ m!(?:://)?(\w+(?:\.\w+)*)/?(#\w+)!
-                )
-                ) {
-                'C<'
-                    . $channel
-                    . '> on C<'
-                    . $network . '>|'
-                    . $distmeta->{resources}{x_IRC};
-            }
-            else {
-                $distmeta->{resources}{x_IRC};
-            }
-            }
-            . '>.'
-        : (),
-    ),
-    (
-        ( $distmeta->{x_authority} // '' ) eq 'cpan:DROLSKY'
-        ? q{I am also usually active on IRC as 'autarch' on C<irc://irc.perl.org>.}
-        : (),
-    ),
     )
 }}
 SUPPORT
